Fix welcoming message to be aligned with navigation and posts

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -158,7 +158,7 @@ section {
     }
 
     @media screen and (min-width: 900px) {
-        margin: 0 auto 0 150px;
+        margin: 0 auto 0 170px;
         width: 65%;
         float: top;
 
